# haskell-backend

./: .editorconfig  .gitignore  .gitmodules  .hlint.yaml  .stylish-haskell.yaml  Dockerfile  Jenkinsfile  Jenkinsfile.update  LICENSE  Makefile  README.md  `  build  build.sbt  cabal.project  cabal.project.freeze  cabal.project.local  default.nix  entr.sh  envrc.sh  flake.nix  fourmolu.yaml  ghcid.sh  global-stack.yaml  hanger.txt  hanger2.pseudo-hs  hie-bios.sh  hie-cabal.yaml  hie-stack.yaml  hie.yaml  hooks.sh  include.mk  kore-exec-step.sh  notes-json-kore.org  notes-parallel-build.org  pom.xml  profile.json  shell.nix  stack-nix-ghc9.yaml  stack.yaml  (+2 more)
app/match-disjunction/: Main.hs  kore-match-disjunction.cabal
app/prof/: Main.hs  kore-prof.cabal
kore/: .gitignore  CHANGELOG.md  Makefile  README.md  Setup.hs  debug-simplf-input  debug-simplf-simplf  kore.cabal  log  package.yaml
kore-rpc-types/: kore-rpc-types.cabal
kore-rpc-types/src/Kore/: Util.hs
kore-rpc-types/src/Kore/JsonRpc/: Error.hs  Server.hs  Types.hs
kore-rpc-types/src/Kore/Network/: JsonRpc.hs
kore/app/check-functions/: Main.hs
kore/app/exec/: Main.hs
kore/app/format/: Main.hs
kore/app/match-disjunction/: Main.hs
kore/app/parser/: Main.hs
kore/app/prof/: Main.hs
kore/app/profiler/: Main.hs
kore/app/prover/: Main.hs
kore/app/repl/: Main.hs
kore/app/rpc/: Main.hs
kore/app/share/: GlobalMain.hs  VersionInfo.hs
kore/app/simplify/: Main.hs
kore/bench/exec/: Main.hs
kore/bench/parser/: Main.hs
kore/data/: kast.kscript
kore/src/: Branch.hs  Changed.hs  Debug.hs  ErrorContext.hs  From.hs  Generically.hs  GraphTraversal.hs  Injection.hs  KoreJson.hs  ListT.hs  Log.hs  Logic.hs  Pair.hs  Partial.hs  Pretty.hs  Prof.hs  SMT.hs  SQL.hs  SimpleSMT.hs  Stats.hs  UnrollMaybe.hs
kore/src/App/: GlobalMain.hs
kore/src/Control/Monad/: Counter.hs  Stabilize.hs
kore/src/Data/: InternedText.hs  Limit.hs  Sup.hs
kore/src/Data/Compact/: Serialize.hs
kore/src/Data/Graph/: TopologicalSort.hs
kore/src/Data/Map/: Class.hs  Dynamic.hs
kore/src/Data/Serialize/: Orphans.hs
kore/src/Kore/: 2  ASTHelpers.hs  ASTPrettyPrint.hs  AllPath.hs  Annotation.hs  BugReport.hs  Builtin.hs  CheckFunctions.hs  Debug.hs  Equation.hs  Error.hs  Exec.hs  Goal.hs  HasPriority.hs  JsonRpc.hs  Log.hs  Logger.hs  Options.hs  OptionsParser.hs  Parser.hs  Prof.hs  ProofState.hs  Reachability.hs  Repl.hs  Rewrite.hs  Sort.hs  Step.hs  SubstVar.hs  Substitute.hs  Syntax.hs  TopBottom.hs  Unparser.hs  Validate.hs  Verified.hs  VersionInfo.hs
kore/src/Kore/AST/: ApplicativeKore.hs  AstWithLocation.hs  Builders.hs  BuildersImpl.hs  Common.hs  Error.hs  Identifier.hs  Kore.hs  Lens.hs  MLPatterns.hs  MetaOrObject.hs  Pure.hs  PureToKore.hs  Sentence.hs  Valid.hs
kore/src/Kore/ASTUtils/: AlphaCompare.hs  SmartPatterns.hs
kore/src/Kore/ASTVerifier/: AliasVerifier.hs  AttributesVerifier.hs  DefinitionVerifier.hs  Error.hs  ModuleVerifier.hs  PatternVerifier.hs  SentenceVerifier.hs  SortVerifier.hs  Verifier.hs
kore/src/Kore/Annotation/: Null.hs  Valid.hs
kore/src/Kore/Attribute/: #Location.hs#  Assoc.hs  Attributes.hs  Axiom.hs  Comm.hs  Concat.hs  Constructor.hs  Definition.hs  Element.hs  Function.hs  Functional.hs  HeatCool.hs  Hook.hs  Idem.hs  Injective.hs  Label.hs  Location.hs  Null.hs  Overload.hs  Owise.hs  Parser.hs  Pattern.hs  PredicatePattern.hs  PreservesDefinedness.hs  Priority.hs  ProductionID.hs  RuleIndex.hs  Simplification.hs  SmtLemma.hs  Smthook.hs  Smtlib.hs  Sort.hs  SortInjection.hs  Source.hs  SourceLocation.hs  Subsort.hs  Symbol.hs  SymbolData.hs  Synthetic.hs  Total.hs  (+3 more)
kore/src/Kore/Building/: Sorts.hs
kore/src/Kore/Builtin/: AssociativeCommutative.hs  Attributes.hs  Bool.hs  Builtin.hs  Encoding.hs  Endianness.hs  EqTerm.hs  Error.hs  External.hs  IO.hs  Inj.hs  Int.hs  InternalBytes.hs  KEqual.hs  Kreflection.hs  Krypto.hs  List.hs  Map.hs  MapSymbols.hs  Set.hs  SetSymbols.hs  Signedness.hs  String.hs  Symbols.hs  Verifiers.hs
kore/src/Kore/Claim/: Claim.hs  EquationalClaim.hs  SomeClaim.hs
kore/src/Kore/Domain/: Builtin.hs  Class.hs  External.hs
kore/src/Kore/Equation/: Application.hs  DebugEquation.hs  Equation.hs  Registry.hs  Sentence.hs  Simplification.hs  Types.hs  Validate.hs
kore/src/Kore/Exec/: GraphTraversal.hs
kore/src/Kore/Implicit/: Definitions.hs  ImplicitKore.hs  ImplicitSorts.hs  ImplicitSortsImpl.hs  ImplicitVarsInternal.hs  Verified.hs
kore/src/Kore/IndexedModule/: Error.hs  IndexedModule.hs  MetadataTools.hs  MetadataToolsBuilder.hs  OverloadGraph.hs  Resolvers.hs  SortGraph.hs
kore/src/Kore/Internal/: Alias.hs  ApplicationSorts.hs  Condition.hs  Conditional.hs  From.hs  Inj.hs  InternalBool.hs  InternalBytes.hs  InternalInt.hs  InternalList.hs  InternalMap.hs  InternalSet.hs  InternalString.hs  Key.hs  MultiAnd.hs  MultiExists.hs  MultiOr.hs  (+17 more)
kore/src/Log/: Entry.hs  SQLite.hs
kore/src/Options/: SMT.hs
kore/src/Prelude/: Kore.hs
kore/src/SMT/: AST.hs  SimpleSMT.hs  Utils.hs
kore/src/SQL/: Column.hs  ColumnDef.hs  Key.hs  Query.hs  SOP.hs  SQL.hs  Table.hs
kore/src/Template/: Tools.hs
kore/src/Text/: IndentingPrinter.hs
kore/test/: Bisector.hs  Driver.hs  Hanger.hs  Paths.hs  Test.hs
kore/test/Test/: ConsistentKore.hs  Debug.hs  Expect.hs  Injection.hs  Kore.hs  KoreJson.hs  ListT.hs  Pretty.hs  SMT.hs  SQL.hs  Stats.hs  Terse.hs
kore/test/resources/: bool.kore  list.kore  nat.kore  test-bool-2.kore.golden  test-bool-3.kore.golden  test-bool-4.kore.golden  test-dv-2.kore.golden  test-dv-3.kore.golden  test-exception-14.kore.golden  test-exception-21.kore.golden  test-exception-27.kore.golden  test-exception-4.kore.golden  test-exception-5.kore.golden  test-exception-6.kore.golden  test-exception-7.kore.golden  test-hooks-4.kore.golden  test-hooks-5.kore.golden  test-hooks-8.kore.golden  test-hooks-9.kore.golden  test-hooks-ctor.kore.golden  test-int-2.kore.golden  test-int-3.kore.golden  test-int-4.kore.golden  test-int-5.kore.golden  test-issue-94-1.kore.golden  test-issue-94-2.kore.golden  test-string-4.kore.golden
(+5219 files in other folders)
