cabal-version: 2.2
name:           kore-rpc-types
version:        0.1.5
description:    Please see the [README](README.md) file.
category:       Language
homepage:       https://github.com/runtimeverification/haskell-backend#readme
bug-reports:    https://github.com/runtimeverification/haskell-backend/issues
author:         Runtime Verification Inc
maintainer:     ana.pantilie@runtimeverification.com
copyright:      2022-2023 Runtime Verification Inc
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/runtimeverification/haskell-backend

common haskell
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    StandaloneDeriving
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
  default-language: Haskell2010
  build-depends: base >=4.7
  ghc-options:
    -fno-ignore-asserts
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wnoncanonical-monad-instances
    -Wmissing-deriving-strategies
  ghc-options:
    -j4
  ghc-options:
    -Wmissing-export-lists
    -Wpartial-fields
    -fwrite-ide-info
    -hiedir=.hie

common library
  -- Dependencies of the library, shared in common with the tests
  build-depends: aeson >=1.4
  build-depends: aeson-pretty == 0.8.10
  build-depends: bytestring >=0.10
  build-depends: casing >= 0.1.4
  build-depends: conduit >= 1.3
  build-depends: conduit-extra >=1.3
  build-depends: deepseq >=1.4
  build-depends: extra >=1.7
  build-depends: deriving-aeson >=0.2
  build-depends: json-rpc >=1.0
  build-depends: monad-logger >=0.3.36
  build-depends: mtl >=2.2
  build-depends: prettyprinter >=1.2
  build-depends: stm >=2.5
  build-depends: stm-conduit >= 4.0
  build-depends: text >=1.2
  build-depends: unliftio >= 0.2
  build-depends: vector >= 0.12.3.1

library
  import: haskell
  import: library
  exposed-modules:
    Kore.Util
    Kore.JsonRpc.Error
    Kore.JsonRpc.Types
    Kore.JsonRpc.Types.Log
    Kore.JsonRpc.Types.Depth
    Kore.JsonRpc.Server
    Kore.Syntax.Json.Types
  hs-source-dirs:
    src
