cabal-version: 2.2
name:           kore
version:        0.48.0.0
description:    Please see the [README](README.md) file.
category:       Language
homepage:       https://github.com/kframework/kore#readme
bug-reports:    https://github.com/kframework/kore/issues
author:         Runtime Verification Inc
maintainer:     thomas.tuegel@runtimeverification.com
copyright:      2018-2021 Runtime Verification Inc
license:        NCSA
license-file:   LICENSE
build-type:     Simple
extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/kframework/kore

flag release
  description: Build a faster runtime, at the expense of a slower build.
  manual: True
  default: False

flag threaded
  description: Use the threaded runtime. Recommended to disable for profiling.
  manual: True
  default: True

common haskell
  -- Common Haskell dialect
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    Strict
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns
  default-language: Haskell2010
  build-depends: base >=4.7
  ghc-options:
    -fno-ignore-asserts
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wnoncanonical-monad-instances
    -Wmissing-deriving-strategies
  ghc-options:
  if impl(ghc >= 8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options: -fwrite-ide-info -hiedir=.hie

common exe
  -- Common options for all executables
  if flag(threaded)
    ghc-options: -threaded -rtsopts "-with-rtsopts=-N -T -A32M -qn4"
  else
    ghc-options: -rtsopts "-with-rtsopts=-A32M -T"

common global-main
  -- Common options for all executables that depend on GlobalMain
  other-modules:
    GlobalMain
    Paths_kore
  hs-source-dirs: app/share
  build-depends: kore
  build-depends: clock >=0.8
  build-depends: containers >=0.5
  build-depends: filepath >=1.4
  build-depends: lens >=4.17
  build-depends: megaparsec >=7.0
  build-depends: optparse-applicative >=0.14
  build-depends: text >=1.2

common library
  -- Dependencies of the library, shared in common with the tests
  build-depends: adjunctions >=4.4
  build-depends: aeson >=1.4
  build-depends: bytestring >=0.10
  build-depends: clock >=0.8
  build-depends: co-log >=0.3
  build-depends: comonad >=5.0
  build-depends: containers >=0.5.8
  build-depends: cryptonite >=0.25
  build-depends: data-default >=0.7
  build-depends: deepseq >=1.4
  build-depends: directory >=1.3
  build-depends: distributive >=0.6
  build-depends: errors >=2.3
  build-depends: exceptions >=0.10
  build-depends: extra >=1.6
  build-depends: fgl >=5.7
  build-depends: filepath >=1.4
  build-depends: free >=5.1
  build-depends: generic-lens >=1.1
  build-depends: generics-sop >=0.5
  build-depends: ghc-trace-events >=0.1
  build-depends: gitrev >=1.3
  build-depends: graphviz >=2999.20
  build-depends: hashable >=1.2
  build-depends: integer-gmp >=1.0
  build-depends: lens >=4.17
  build-depends: logict >=0.7
  build-depends: megaparsec >=7.0.4
  build-depends: mmorph >=1.1
  build-depends: mtl >=2.2
  build-depends: optparse-applicative >=0.14
  build-depends: parser-combinators >=1.1
  build-depends: prettyprinter >=1.2
  build-depends: process >=1.6
  build-depends: profunctors >=5.3
  build-depends: recursion-schemes >=5.1
  build-depends: reflection >=2.1
  build-depends: semialign >=1
  build-depends: sqlite-simple >=0.4
  build-depends: streams
  build-depends: tar >=0.5
  build-depends: template-haskell >=2.14
  build-depends: temporary >=1.3
  build-depends: text >=1.2
  build-depends: these >=1.0
  build-depends: transformers >=0.4
  build-depends: unordered-containers >=0.2
  build-depends: vector >=0.12
  build-depends: witherable ==0.3.*
  build-depends: zlib >=0.6

library
  import: haskell
  import: library
  exposed-modules:
    Changed
    Control.Monad.Counter
    Data.Graph.TopologicalSort
    Data.Limit
    Data.Sup
    Debug
    ErrorContext
    From
    Injection
    Kore.AST.ApplicativeKore
    Kore.AST.AstWithLocation
    Kore.AST.Common
    Kore.AST.Error
    Kore.Attribute.Assoc
    Kore.Attribute.Attributes
    Kore.Attribute.Axiom
    Kore.Attribute.Axiom.Concrete
    Kore.Attribute.Axiom.Constructor
    Kore.Attribute.Axiom.Symbolic
    Kore.Attribute.Axiom.Unit
    Kore.Attribute.Comm
    Kore.Attribute.Constructor
    Kore.Attribute.Definition
    Kore.Attribute.Function
    Kore.Attribute.Functional
    Kore.Attribute.Hook
    Kore.Attribute.Idem
    Kore.Attribute.Injective
    Kore.Attribute.Label
    Kore.Attribute.Location
    Kore.Attribute.Null
    Kore.Attribute.Overload
    Kore.Attribute.Owise
    Kore.Attribute.Parser
    Kore.Attribute.Pattern.ConstructorLike
    Kore.Attribute.Pattern.Created
    Kore.Attribute.Pattern.Defined
    Kore.Attribute.Pattern.FreeVariables
    Kore.Attribute.Pattern.Function
    Kore.Attribute.Pattern.Functional
    Kore.Attribute.Pattern.Simplified
    Kore.Attribute.PredicatePattern
    Kore.Attribute.Priority
    Kore.Attribute.ProductionID
    Kore.Attribute.RuleIndex
    Kore.Attribute.Simplification
    Kore.Attribute.Smthook
    Kore.Attribute.SmtLemma
    Kore.Attribute.Smtlib
    Kore.Attribute.Smtlib.Smthook
    Kore.Attribute.Smtlib.Smtlib
    Kore.Attribute.Sort
    Kore.Attribute.Sort.Concat
    Kore.Attribute.Sort.Constructors
    Kore.Attribute.Sort.ConstructorsBuilder
    Kore.Attribute.Sort.Element
    Kore.Attribute.Sort.HasDomainValues
    Kore.Attribute.Sort.Unit
    Kore.Attribute.SortInjection
    Kore.Attribute.Source
    Kore.Attribute.SourceLocation
    Kore.Attribute.Subsort
    Kore.Attribute.Symbol
    Kore.Attribute.Symbol.Anywhere
    Kore.Attribute.Symbol.Klabel
    Kore.Attribute.Symbol.Memo
    Kore.Attribute.Symbol.NoEvaluators
    Kore.Attribute.Symbol.SymbolKywd
    Kore.Attribute.Synthetic
    Kore.Attribute.Trusted
    Kore.Attribute.UniqueId
    Kore.BugReport
    Kore.Builtin
    Kore.Builtin.AssocComm.AssocComm
    Kore.Builtin.AssocComm.CeilSimplifier
    Kore.Builtin.AssociativeCommutative
    Kore.Builtin.Attributes
    Kore.Builtin.Bool
    Kore.Builtin.Bool.Bool
    Kore.Builtin.Builtin
    Kore.Builtin.Encoding
    Kore.Builtin.Endianness
    Kore.Builtin.Endianness.Endianness
    Kore.Builtin.EqTerm
    Kore.Builtin.Error
    Kore.Builtin.Inj
    Kore.Builtin.Int
    Kore.Builtin.Int.Int
    Kore.Builtin.InternalBytes
    Kore.Builtin.InternalBytes.InternalBytes
    Kore.Builtin.KEqual
    Kore.Builtin.Kreflection
    Kore.Builtin.Krypto
    Kore.Builtin.List
    Kore.Builtin.List.List
    Kore.Builtin.Map
    Kore.Builtin.Map.Map
    Kore.Builtin.Set
    Kore.Builtin.Set.Set
    Kore.Builtin.Signedness
    Kore.Builtin.Signedness.Signedness
    Kore.Builtin.String
    Kore.Builtin.String.String
    Kore.Builtin.Symbols
    Kore.Builtin.Verifiers
    Kore.Debug
    Kore.Equation
    Kore.Equation.Application
    Kore.Equation.Equation
    Kore.Equation.Registry
    Kore.Equation.Sentence
    Kore.Equation.Simplification
    Kore.Equation.Validate
    Kore.Error
    Kore.Exec
    Kore.IndexedModule.Error
    Kore.IndexedModule.IndexedModule
    Kore.IndexedModule.MetadataTools
    Kore.IndexedModule.MetadataToolsBuilder
    Kore.IndexedModule.OverloadGraph
    Kore.IndexedModule.Resolvers
    Kore.IndexedModule.SortGraph
    Kore.Internal.Alias
    Kore.Internal.ApplicationSorts
    Kore.Internal.Condition
    Kore.Internal.Conditional
    Kore.Internal.From
    Kore.Internal.Inj
    Kore.Internal.InternalBool
    Kore.Internal.InternalBytes
    Kore.Internal.InternalInt
    Kore.Internal.InternalList
    Kore.Internal.InternalMap
    Kore.Internal.InternalSet
    Kore.Internal.InternalString
    Kore.Internal.Key
    Kore.Internal.MultiAnd
    Kore.Internal.MultiOr
    Kore.Internal.NormalizedAc
    Kore.Internal.OrCondition
    Kore.Internal.OrPattern
    Kore.Internal.Pattern
    Kore.Internal.Predicate
    Kore.Internal.SideCondition
    Kore.Internal.SideCondition.SideCondition
    Kore.Internal.Substitution
    Kore.Internal.Symbol
    Kore.Internal.TermLike
    Kore.Internal.TermLike.Renaming
    Kore.Internal.TermLike.TermLike
    Kore.Internal.Variable
    Kore.Log
    Kore.Log.DebugAppliedRewriteRules
    Kore.Log.DebugClaimState
    Kore.Log.DebugEvaluateCondition
    Kore.Log.DebugProven
    Kore.Log.DebugSolver
    Kore.Log.DebugSubstitutionSimplifier
    Kore.Log.DebugUnification
    Kore.Log.ErrorBottomTotalFunction
    Kore.Log.ErrorDecidePredicateUnknown
    Kore.Log.ErrorException
    Kore.Log.ErrorParse
    Kore.Log.ErrorRewriteLoop
    Kore.Log.ErrorRewritesInstantiation
    Kore.Log.ErrorRuleMergeDuplicate
    Kore.Log.ErrorVerify
    Kore.Log.InfoAttemptUnification
    Kore.Log.InfoExecBreadth
    Kore.Log.InfoExecDepth
    Kore.Log.InfoProofDepth
    Kore.Log.InfoReachability
    Kore.Log.KoreLogOptions
    Kore.Log.Registry
    Kore.Log.SQLite
    Kore.Log.WarnBoundedModelChecker
    Kore.Log.WarnDepthLimitExceeded
    Kore.Log.WarnFunctionWithoutEvaluators
    Kore.Log.WarnIfLowProductivity
    Kore.Log.WarnNotImplemented
    Kore.Log.WarnRetrySolverQuery
    Kore.Log.WarnStuckClaimState
    Kore.Log.WarnSymbolSMTRepresentation
    Kore.Log.WarnTrivialClaim
    Kore.Log.DebugUnifyBottom
    Kore.ModelChecker.Bounded
    Kore.ModelChecker.Simplification
    Kore.ModelChecker.Step
    Kore.Options
    Kore.Parser
    Kore.Parser.CString
    Kore.Parser.Lexer
    Kore.Parser.Parser
    Kore.Parser.ParserUtils
    Kore.Reachability
    Kore.Reachability.AllPathClaim
    Kore.Reachability.Claim
    Kore.Reachability.ClaimState
    Kore.Reachability.OnePathClaim
    Kore.Reachability.Prim
    Kore.Reachability.Prove
    Kore.Reachability.SomeClaim
    Kore.Repl
    Kore.Repl.Data
    Kore.Repl.Interpreter
    Kore.Repl.Parser
    Kore.Repl.State
    Kore.Rewrite
    Kore.Rewrite.AntiLeft
    Kore.Rewrite.Axiom.EvaluationStrategy
    Kore.Rewrite.Axiom.Identifier
    Kore.Rewrite.Axiom.Matcher
    Kore.Rewrite.Axiom.Registry
    Kore.Rewrite.AxiomPattern
    Kore.Rewrite.ClaimPattern
    Kore.Rewrite.Function.Evaluator
    Kore.Rewrite.Function.Memo
    Kore.Rewrite.Implication
    Kore.Rewrite.Remainder
    Kore.Rewrite.Result
    Kore.Rewrite.RewriteStep
    Kore.Rewrite.Rule
    Kore.Rewrite.Rule.Combine
    Kore.Rewrite.Rule.Expand
    Kore.Rewrite.Rule.Simplify
    Kore.Rewrite.RulePattern
    Kore.Rewrite.Search
    Kore.Rewrite.SMT.AST
    Kore.Rewrite.SMT.Declaration.All
    Kore.Rewrite.SMT.Declaration.Sorts
    Kore.Rewrite.SMT.Declaration.Symbols
    Kore.Rewrite.SMT.Encoder
    Kore.Rewrite.SMT.Evaluator
    Kore.Rewrite.SMT.Lemma
    Kore.Rewrite.SMT.Representation.All
    Kore.Rewrite.SMT.Representation.Resolve
    Kore.Rewrite.SMT.Representation.Sorts
    Kore.Rewrite.SMT.Representation.Symbols
    Kore.Rewrite.SMT.Resolvers
    Kore.Rewrite.SMT.Translate
    Kore.Rewrite.Step
    Kore.Rewrite.Strategy
    Kore.Rewrite.Substitution
    Kore.Rewrite.Transition
    Kore.Rewrite.RewritingVariable
    Kore.Rewrite.UnifyingRule
    Kore.Simplify.And
    Kore.Simplify.AndPredicates
    Kore.Simplify.AndTerms
    Kore.Simplify.Application
    Kore.Simplify.Bottom
    Kore.Simplify.Ceil
    Kore.Simplify.CeilSimplifier
    Kore.Simplify.Condition
    Kore.Simplify.Data
    Kore.Simplify.DomainValue
    Kore.Simplify.Equals
    Kore.Simplify.Exists
    Kore.Simplify.ExpandAlias
    Kore.Simplify.Floor
    Kore.Simplify.Forall
    Kore.Simplify.Iff
    Kore.Simplify.Implies
    Kore.Simplify.In
    Kore.Simplify.Inhabitant
    Kore.Simplify.Inj
    Kore.Simplify.InjSimplifier
    Kore.Simplify.InternalBool
    Kore.Simplify.InternalBytes
    Kore.Simplify.InternalInt
    Kore.Simplify.InternalList
    Kore.Simplify.InternalMap
    Kore.Simplify.InternalSet
    Kore.Simplify.InternalString
    Kore.Simplify.Mu
    Kore.Simplify.Next
    Kore.Simplify.NoConfusion
    Kore.Simplify.Not
    Kore.Simplify.NotSimplifier
    Kore.Simplify.Nu
    Kore.Simplify.Or
    Kore.Simplify.OrPattern
    Kore.Simplify.Overloading
    Kore.Simplify.OverloadSimplifier
    Kore.Simplify.Pattern
    Kore.Simplify.Predicate
    Kore.Simplify.Rule
    Kore.Simplify.SetVariable
    Kore.Simplify.SimplificationType
    Kore.Simplify.Simplify
    Kore.Simplify.StringLiteral
    Kore.Simplify.SubstitutionSimplifier
    Kore.Simplify.TermLike
    Kore.Simplify.Top
    Kore.Simplify.Variable
    Kore.Sort
    Kore.Substitute
    Kore.Syntax
    Kore.Syntax.And
    Kore.Syntax.Application
    Kore.Syntax.Bottom
    Kore.Syntax.Ceil
    Kore.Syntax.Definition
    Kore.Syntax.DomainValue
    Kore.Syntax.Equals
    Kore.Syntax.Exists
    Kore.Syntax.Floor
    Kore.Syntax.Forall
    Kore.Syntax.Id
    Kore.Syntax.Iff
    Kore.Syntax.Implies
    Kore.Syntax.In
    Kore.Syntax.Inhabitant
    Kore.Syntax.Module
    Kore.Syntax.Mu
    Kore.Syntax.Next
    Kore.Syntax.Not
    Kore.Syntax.Nu
    Kore.Syntax.Or
    Kore.Syntax.Pattern
    Kore.Syntax.PatternF
    Kore.Syntax.Rewrites
    Kore.Syntax.Sentence
    Kore.Syntax.StringLiteral
    Kore.Syntax.Top
    Kore.Syntax.Variable
    Kore.TopBottom
    Kore.Unification.Procedure
    Kore.Unification.SubstitutionNormalization
    Kore.Unification.SubstitutionSimplifier
    Kore.Unification.UnifierT
    Kore.Unification.Unify
    Kore.Unparser
    Kore.Validate.AliasVerifier
    Kore.Validate.AttributesVerifier
    Kore.Validate.DefinitionVerifier
    Kore.Validate.Error
    Kore.Validate.ModuleVerifier
    Kore.Validate.PatternVerifier
    Kore.Validate.PatternVerifier.PatternVerifier
    Kore.Validate.SentenceVerifier
    Kore.Validate.SortVerifier
    Kore.Validate.Verifier
    Kore.Variables.Binding
    Kore.Variables.Free
    Kore.Variables.Fresh
    Kore.Variables.Target
    Kore.Verified
    Kore.VersionInfo
    Log
    Log.Entry
    Logic
    Options.SMT
    Pair
    Partial
    Prelude.Kore
    Pretty
    Prof
    SMT
    SMT.AST
    SMT.SimpleSMT
    SQL
    SQL.ColumnDef
    SQL.Key
    SQL.Query
    SQL.SOP
    SQL.SQL
    Stats
  hs-source-dirs: src
  if !flag(release)
    ghc-options: -fno-specialise

executable kore-exec
  import: haskell
  import: exe
  import: global-main
  main-is: Main.hs
  hs-source-dirs: app/exec
  build-depends: data-default >=0.7
  build-depends: directory >=1.3
  build-depends: exceptions >=0.10
  build-depends: extra >=1.6
  build-depends: generic-lens >=1.1
  build-depends: reflection >=2.1
  ghc-options: -eventlog

executable kore-format
  import: haskell
  import: exe
  import: global-main
  main-is: Main.hs
  hs-source-dirs: app/format

executable kore-parser
  import: haskell
  import: exe
  import: global-main
  main-is: Main.hs
  hs-source-dirs: app/parser
  build-depends: exceptions >=0.10

executable kore-prof
  import: haskell
  import: exe
  main-is: Main.hs
  hs-source-dirs: app/prof
  build-depends: eventlog2speedscope
  build-depends: optparse-applicative >=0.14

executable kore-repl
  import: haskell
  import: exe
  import: global-main
  main-is: Main.hs
  hs-source-dirs: app/repl
  build-depends: exceptions >=0.10
  build-depends: reflection >=2.1

test-suite kore-test
  import: haskell
  import: library
  import: exe
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules:
    Driver
    Test.ConsistentKore
    Test.Data.Graph.TopologicalSort
    Test.Data.Limit
    Test.Data.Sup
    Test.Debug
    Test.Expect
    Test.Injection
    Test.Kore
    Test.Kore.AST.Common
    Test.Kore.Attribute.Assoc
    Test.Kore.Attribute.Axiom.Concrete
    Test.Kore.Attribute.Axiom.Symbolic
    Test.Kore.Attribute.Axiom.Unit
    Test.Kore.Attribute.Comm
    Test.Kore.Attribute.Constructor
    Test.Kore.Attribute.Function
    Test.Kore.Attribute.Functional
    Test.Kore.Attribute.Hook
    Test.Kore.Attribute.Idem
    Test.Kore.Attribute.Injective
    Test.Kore.Attribute.Label
    Test.Kore.Attribute.Overload
    Test.Kore.Attribute.Owise
    Test.Kore.Attribute.Parser
    Test.Kore.Attribute.Pattern.ConstructorLike
    Test.Kore.Attribute.Pattern.Defined
    Test.Kore.Attribute.Pattern.FreeVariables
    Test.Kore.Attribute.Pattern.Function
    Test.Kore.Attribute.Pattern.Functional
    Test.Kore.Attribute.Pattern.Sort
    Test.Kore.Attribute.Priority
    Test.Kore.Attribute.ProductionID
    Test.Kore.Attribute.Simplification
    Test.Kore.Attribute.Smtlib
    Test.Kore.Attribute.Sort.ConstructorsBuilder
    Test.Kore.Attribute.Sort.HasDomainValues
    Test.Kore.Attribute.Sort.Unit
    Test.Kore.Attribute.SortInjection
    Test.Kore.Attribute.Subsort
    Test.Kore.Attribute.Symbol
    Test.Kore.Attribute.Symbol.Anywhere
    Test.Kore.Attribute.Symbol.Klabel
    Test.Kore.Attribute.Symbol.Memo
    Test.Kore.Attribute.Symbol.NoEvaluators
    Test.Kore.Attribute.Symbol.SymbolKywd
    Test.Kore.Attribute.Trusted
    Test.Kore.Attribute.UniqueId
    Test.Kore.BugReport
    Test.Kore.Builtin
    Test.Kore.Builtin.AssocComm.CeilSimplifier
    Test.Kore.Builtin.Bool
    Test.Kore.Builtin.Builtin
    Test.Kore.Builtin.Definition
    Test.Kore.Builtin.Encoding
    Test.Kore.Builtin.Endianness
    Test.Kore.Builtin.External
    Test.Kore.Builtin.Inj
    Test.Kore.Builtin.Int
    Test.Kore.Builtin.InternalBytes
    Test.Kore.Builtin.KEqual
    Test.Kore.Builtin.Krypto
    Test.Kore.Builtin.List
    Test.Kore.Builtin.Map
    Test.Kore.Builtin.Set
    Test.Kore.Builtin.Signedness
    Test.Kore.Builtin.String
    Test.Kore.Contains
    Test.Kore.Equation.Application
    Test.Kore.Equation.Common
    Test.Kore.Equation.Sentence
    Test.Kore.Equation.Simplification
    Test.Kore.Error
    Test.Kore.Exec
    Test.Kore.IndexedModule.Error
    Test.Kore.IndexedModule.MockMetadataTools
    Test.Kore.IndexedModule.OverloadGraph
    Test.Kore.IndexedModule.Resolvers
    Test.Kore.IndexedModule.SortGraph
    Test.Kore.Internal.ApplicationSorts
    Test.Kore.Internal.Condition
    Test.Kore.Internal.From
    Test.Kore.Internal.Key
    Test.Kore.Internal.MultiAnd
    Test.Kore.Internal.OrCondition
    Test.Kore.Internal.OrPattern
    Test.Kore.Internal.Pattern
    Test.Kore.Internal.Predicate
    Test.Kore.Internal.SideCondition
    Test.Kore.Internal.Substitution
    Test.Kore.Internal.Symbol
    Test.Kore.Internal.TermLike
    Test.Kore.Log.DebugEvaluateCondition
    Test.Kore.Log.ErrorBottomTotalFunction
    Test.Kore.Log.WarnFunctionWithoutEvaluators
    Test.Kore.Log.WarnSymbolSMTRepresentation
    Test.Kore.Options
    Test.Kore.Parser
    Test.Kore.Parser.Lexer
    Test.Kore.Parser.Parser
    Test.Kore.Reachability.Claim
    Test.Kore.Reachability.MockAllPath
    Test.Kore.Reachability.OnePathStrategy
    Test.Kore.Reachability.Prove
    Test.Kore.Reachability.SomeClaim
    Test.Kore.Repl.Graph
    Test.Kore.Repl.Interpreter
    Test.Kore.Repl.Parser
    Test.Kore.Rewrite
    Test.Kore.Rewrite.AntiLeft
    Test.Kore.Rewrite.Axiom.EvaluationStrategy
    Test.Kore.Rewrite.Axiom.Identifier
    Test.Kore.Rewrite.Axiom.Matcher
    Test.Kore.Rewrite.Axiom.Registry
    Test.Kore.Rewrite.ClaimPattern
    Test.Kore.Rewrite.Function.Evaluator
    Test.Kore.Rewrite.Function.Integration
    Test.Kore.Rewrite.Function.Memo
    Test.Kore.Rewrite.Implication
    Test.Kore.Rewrite.MockSymbols
    Test.Kore.Rewrite.Remainder
    Test.Kore.Rewrite.RewriteStep
    Test.Kore.Rewrite.Rule
    Test.Kore.Rewrite.Rule.Combine
    Test.Kore.Rewrite.Rule.Common
    Test.Kore.Rewrite.Rule.Expand
    Test.Kore.Rewrite.Rule.Simplify
    Test.Kore.Rewrite.RulePattern
    Test.Kore.Rewrite.SMT.Builders
    Test.Kore.Rewrite.SMT.Evaluator
    Test.Kore.Rewrite.SMT.Helpers
    Test.Kore.Rewrite.SMT.Representation.All
    Test.Kore.Rewrite.SMT.Representation.Builders
    Test.Kore.Rewrite.SMT.Representation.Helpers
    Test.Kore.Rewrite.SMT.Representation.Sorts
    Test.Kore.Rewrite.SMT.Representation.Symbols
    Test.Kore.Rewrite.SMT.Sorts
    Test.Kore.Rewrite.SMT.Symbols
    Test.Kore.Rewrite.SMT.Translate
    Test.Kore.Rewrite.Strategy
    Test.Kore.Rewrite.Transition
    Test.Kore.Rewrite.RewritingVariable
    Test.Kore.Simplify
    Test.Kore.Simplify.And
    Test.Kore.Simplify.AndTerms
    Test.Kore.Simplify.Application
    Test.Kore.Simplify.Bottom
    Test.Kore.Simplify.Ceil
    Test.Kore.Simplify.Condition
    Test.Kore.Simplify.DomainValue
    Test.Kore.Simplify.Equals
    Test.Kore.Simplify.Exists
    Test.Kore.Simplify.Floor
    Test.Kore.Simplify.Forall
    Test.Kore.Simplify.Iff
    Test.Kore.Simplify.Implies
    Test.Kore.Simplify.Inj
    Test.Kore.Simplify.InjSimplifier
    Test.Kore.Simplify.Integration
    Test.Kore.Simplify.IntegrationProperty
    Test.Kore.Simplify.InternalList
    Test.Kore.Simplify.InternalMap
    Test.Kore.Simplify.InternalSet
    Test.Kore.Simplify.Next
    Test.Kore.Simplify.Not
    Test.Kore.Simplify.Or
    Test.Kore.Simplify.OrPattern
    Test.Kore.Simplify.Overloading
    Test.Kore.Simplify.Predicate
    Test.Kore.Simplify.Pattern
    Test.Kore.Simplify.Rule
    Test.Kore.Simplify.StringLiteral
    Test.Kore.Simplify.SubstitutionSimplifier
    Test.Kore.Simplify.TermLike
    Test.Kore.Simplify.Top
    Test.Kore.Syntax.Id
    Test.Kore.Syntax.Variable
    Test.Kore.TopBottom
    Test.Kore.Unification.SubstitutionNormalization
    Test.Kore.Unification.Unifier
    Test.Kore.Unification.UnifierT
    Test.Kore.Unparser
    Test.Kore.Validate.DefinitionVerifier
    Test.Kore.Validate.DefinitionVerifier.Imports
    Test.Kore.Validate.DefinitionVerifier.PatternVerifier
    Test.Kore.Validate.DefinitionVerifier.SentenceVerifier
    Test.Kore.Validate.DefinitionVerifier.SortUsage
    Test.Kore.Validate.DefinitionVerifier.UniqueNames
    Test.Kore.Validate.DefinitionVerifier.UniqueSortVariables
    Test.Kore.Variables.Fresh
    Test.Kore.Variables.Target
    Test.Kore.Variables.V
    Test.Kore.Variables.W
    Test.Kore.With
    Test.Pretty
    Test.SMT
    Test.SMT.AST
    Test.SQL
    Test.Stats
    Test.Tasty.HUnit.Ext
    Test.Terse
  hs-source-dirs: test
  build-tool-depends: tasty-discover:tasty-discover >=4.2
  build-depends: kore
  build-depends: QuickCheck >=2.13
  build-depends: hedgehog >=1.0
  build-depends: quickcheck-instances >=0.3
  build-depends: tasty >=1.2
  build-depends: tasty-golden >=2.3
  build-depends: tasty-hedgehog >=1.0
  build-depends: tasty-hunit >=0.10
  build-depends: tasty-quickcheck >=0.10
  build-depends: tasty-test-reporter >=0.1
  build-depends: template-haskell >=2.14
